Updated main notebook

--- a/Proyecto_Final_Oscar.ipynb
+++ b/Proyecto_Final_Oscar.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "L4",
-      "authorship_tag": "ABX9TyM6SfqXduLAvG3x2d+LvVpl",
+      "authorship_tag": "ABX9TyM53qAUoulQtyzK1YwNkJYV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -357,13 +357,153 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Knowledge Distillation"
+      ],
+      "metadata": {
+        "id": "tayM-GxOrKI0"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def train_knowledge_distillation(teacher, student, train_loader, epochs, learning_rate, T,\n",
+        "soft_target_loss_weight, ce_loss_weight, device):\n",
+        "\n",
+        "    ce_loss = nn.CrossEntropyLoss()\n",
+        "    optimizer = optim.Adam(student.parameters(), lr=learning_rate)\n",
+        "\n",
+        "    teacher.eval()\n",
+        "    student.eval()\n",
+        "\n",
+        "    for epoch in range(epochs):\n",
+        "        running_loss = 0.0\n",
+        "        for inputs, labels in train_loader:\n",
+        "            inputs, labels = inputs.to(device), labels.to(device)\n",
+        "\n",
+        "            optimizer.zero_grad()\n",
+        "\n",
+        "            with torch.no_grad():\n",
+        "                teacher_logits = teacher(inputs)\n",
+        "\n",
+        "            student_logits = student(inputs)\n",
+        "\n",
+        "            soft_targets = nn.functional.softmax(teacher_logits / T, dim=-1)\n",
+        "            soft_prob = nn.functional.log_softmax(student_logits / T, dim=-1)\n",
+        "\n",
+        "            soft_target_loss = torch.sum(soft_targets * (soft_targets.log() - soft_prob)) / soft_prob.size()[0] * (T**2)\n",
+        "\n",
+        "            label_loss = ce_loss(student_logits, labels)\n",
+        "\n",
+        "            loss = soft_target_loss_weight * soft_target_loss + ce_loss_weight * label_loss\n",
+        "\n",
+        "            loss.backward()\n",
+        "            optimizer.step()\n",
+        "\n",
+        "            running_loss += loss.item()\n",
+        "\n",
+        "        print(f\"{epoch+1}/{epochs}, Loss: {running_loss / len(train_loader)}\")"
+      ],
       "metadata": {
         "id": "UVfPDrkzkmRD"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(42)\n",
+        "new_nn_light = LightNN(num_classes=10).to(device)\n",
+        "\n",
+        "train_knowledge_distillation(teacher=nn_deep, student=new_nn_light, train_loader=train_loader,\n",
+        "                             epochs=10, learning_rate=0.001, T=2, soft_target_loss_weight=0.25,\n",
+        "                             ce_loss_weight=0.75, device=device)\n",
+        "\n",
+        "test_accuracy_light_ce_and_kd = test(new_nn_light, test_loader, device)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VxwY9Cuitz6P",
+        "outputId": "e5f4d007-b603-4d63-ead9-a6924c2f4ac2"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1/10, Loss: 2.3772521247644254\n",
+            "2/10, Loss: 1.864064818148113\n",
+            "3/10, Loss: 1.6360787796547345\n",
+            "4/10, Loss: 1.4699511579845264\n",
+            "5/10, Loss: 1.3420475236595135\n",
+            "6/10, Loss: 1.2309744679714407\n",
+            "7/10, Loss: 1.120672263452769\n",
+            "8/10, Loss: 1.0134513981811835\n",
+            "9/10, Loss: 0.9202194927293627\n",
+            "10/10, Loss: 0.8374271621484586\n",
+            "Test Accuracy: 70.64%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"Teacher accuracy: {test_accuracy_deep:.2f}%\")\n",
+        "print(f\"Student accuracy without teacher: {test_accuracy_light_ce:.2f}%\")\n",
+        "print(f\"Student accuracy with CE + KD: {test_accuracy_light_ce_and_kd:.2f}%\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gt5XZZclu8JZ",
+        "outputId": "3489a4d1-1560-4422-d24f-22414eb6020d"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Teacher accuracy: 75.25%\n",
+            "Student accuracy without teacher: 70.46%\n",
+            "Student accuracy with CE + KD: 70.64%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total_params_deep = \"{:,}\".format(sum(p.numel() for p in nn_deep.parameters()))\n",
+        "print(f\"DeepNN parameters: {total_params_deep}\")\n",
+        "total_params_light = \"{:,}\".format(sum(p.numel() for p in nn_light.parameters()))\n",
+        "print(f\"LightNN parameters: {total_params_light}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SvWf5PQivYpi",
+        "outputId": "8e275cfc-f182-4061-b6d6-b0c5bc7af0bb"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "DeepNN parameters: 1,186,986\n",
+            "LightNN parameters: 267,738\n"
+          ]
+        }
+      ]
     }
   ]
 }
