--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -30,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2ib03XZz7Bfd",
-        "outputId": "49295060-c74f-40a6-f07d-2abff573917d"
+        "outputId": "a4062ebe-29d1-4db2-fbc4-6d55795c3d36"
       },
       "outputs": [
         {
@@ -44,12 +44,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'Proyecto-Final-de-Redes-Convolucionales'...\n",
-            "remote: Enumerating objects: 60, done.\u001b[K\n",
-            "remote: Counting objects: 100% (60/60), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (51/51), done.\u001b[K\n",
-            "remote: Total 60 (delta 20), reused 40 (delta 8), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (60/60), 880.41 KiB | 2.87 MiB/s, done.\n",
-            "Resolving deltas: 100% (20/20), done.\n"
+            "remote: Enumerating objects: 86, done.\u001b[K\n",
+            "remote: Counting objects: 100% (86/86), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (67/67), done.\u001b[K\n",
+            "remote: Total 86 (delta 36), reused 59 (delta 18), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (86/86), 883.95 KiB | 3.52 MiB/s, done.\n",
+            "Resolving deltas: 100% (36/36), done.\n"
           ]
         }
       ],
@@ -67,15 +67,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6vstgQ8k7upz",
-        "outputId": "bd0060b7-ac1c-4975-e872-7e336ecfc3e4"
+        "outputId": "be884f85-9b98-43d0-d656-37c5b4aa748d"
       },
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/Proyecto-Final-de-Redes-Convolucionales/Proyecto-Final-de-Redes-Convolucionales/Proyecto-Final-de-Redes-Convolucionales\n"
+            "/content/Proyecto-Final-de-Redes-Convolucionales/Proyecto-Final-de-Redes-Convolucionales/Proyecto-Final-de-Redes-Convolucionales/Proyecto-Final-de-Redes-Convolucionales\n"
           ]
         }
       ]
@@ -90,30 +90,32 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2WiuPsjA76S1",
-        "outputId": "a79b4179-b46a-4ac7-e1ea-42dd3203d675"
+        "outputId": "321c3dc7-5ab2-4bee-81a5-b2a4b57ab96f"
       },
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "cuda\n",
+            "Currently running on cuda\n",
             "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ./data/cifar-10-python.tar.gz\n",
-            "100% 170498071/170498071 [00:03<00:00, 43014170.82it/s]\n",
+            "100% 170498071/170498071 [00:04<00:00, 40103053.68it/s]\n",
             "Extracting ./data/cifar-10-python.tar.gz to ./data\n",
             "Files already downloaded and verified\n",
-            "Epoch 1/10, Loss: 1.4878315585303306\n",
-            "Epoch 2/10, Loss: 1.1559115381546319\n",
-            "Epoch 3/10, Loss: 1.0198961742655188\n",
-            "Epoch 4/10, Loss: 0.9232347940678522\n",
-            "Epoch 5/10, Loss: 0.8404906973069894\n",
-            "Epoch 6/10, Loss: 0.7591602187783186\n",
-            "Epoch 7/10, Loss: 0.6944512794017413\n",
-            "Epoch 8/10, Loss: 0.642167410894616\n",
-            "Epoch 9/10, Loss: 0.5929433130002866\n",
-            "Epoch 10/10, Loss: 0.5494551497296637\n",
-            "Test Accuracy: 65.65%\n"
+            "/usr/lib/python3.10/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
+            "  self.pid = os.fork()\n",
+            "Epoch 1/10, Loss: 1.391913391744999\n",
+            "Epoch 2/10, Loss: 0.9393704228693872\n",
+            "Epoch 3/10, Loss: 0.7451677867366225\n",
+            "Epoch 4/10, Loss: 0.5955142639482113\n",
+            "Epoch 5/10, Loss: 0.4703259580504254\n",
+            "Epoch 6/10, Loss: 0.3603749110951753\n",
+            "Epoch 7/10, Loss: 0.2544738081333887\n",
+            "Epoch 8/10, Loss: 0.1955702493867606\n",
+            "Epoch 9/10, Loss: 0.1559957445734907\n",
+            "Epoch 10/10, Loss: 0.12340425930993484\n",
+            "Test Accuracy: 74.49%\n"
           ]
         }
       ]
