New run on different hyper params

--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -36,7 +36,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2ib03XZz7Bfd",
-        "outputId": "a3a76fa3-2eed-430e-9263-271b05b59268"
+        "outputId": "6d12a32c-8699-4e5f-cd4f-d616ce882a54"
       },
       "outputs": [
         {
@@ -44,12 +44,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'Proyecto-Final-de-Redes-Convolucionales'...\n",
-            "remote: Enumerating objects: 121, done.\u001b[K\n",
-            "remote: Counting objects: 100% (121/121), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (94/94), done.\u001b[K\n",
-            "remote: Total 121 (delta 57), reused 80 (delta 26), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (121/121), 888.56 KiB | 3.54 MiB/s, done.\n",
-            "Resolving deltas: 100% (57/57), done.\n"
+            "remote: Enumerating objects: 148, done.\u001b[K\n",
+            "remote: Counting objects: 100% (148/148), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (114/114), done.\u001b[K\n",
+            "remote: Total 148 (delta 75), reused 95 (delta 33), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (148/148), 892.27 KiB | 3.53 MiB/s, done.\n",
+            "Resolving deltas: 100% (75/75), done.\n"
           ]
         }
       ],
@@ -67,7 +67,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6vstgQ8k7upz",
-        "outputId": "32654714-bfe9-428c-dd73-a2c31dd2c654"
+        "outputId": "62f6323f-2f90-4fab-a348-3a865fec3601"
       },
       "execution_count": 2,
       "outputs": [
@@ -90,7 +90,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2WiuPsjA76S1",
-        "outputId": "0003dfd9-330d-4c17-ccbf-9599d1ff4224"
+        "outputId": "81c257d8-7712-40fb-d258-7cff4c694097"
       },
       "execution_count": 3,
       "outputs": [
@@ -100,30 +100,42 @@
           "text": [
             "Currently running on cuda\n",
             "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ./data/cifar-10-python.tar.gz\n",
-            "100% 170498071/170498071 [00:03<00:00, 43709479.52it/s]\n",
+            "100% 170498071/170498071 [00:04<00:00, 41187733.22it/s]\n",
             "Extracting ./data/cifar-10-python.tar.gz to ./data\n",
             "Files already downloaded and verified\n",
             "/usr/local/lib/python3.10/dist-packages/torch/hub.py:294: UserWarning: You are about to download and run code from an untrusted repository. In a future release, this won't be allowed. To add the repository to your trusted list, change the command to {calling_fn}(..., trust_repo=False) and a command prompt will appear asking for an explicit confirmation of trust, or load(..., trust_repo=True), which will assume that the prompt is to be answered with 'yes'. You can also use load(..., trust_repo='check') which will only prompt for confirmation if the repo is not already trusted. This will eventually be the default behaviour\n",
             "  warnings.warn(\n",
             "Downloading: \"https://github.com/chenyaofo/pytorch-cifar-models/zipball/master\" to /root/.cache/torch/hub/master.zip\n",
             "Downloading: \"https://github.com/chenyaofo/pytorch-cifar-models/releases/download/vgg/cifar10_vgg16_bn-6ee7ea24.pt\" to /root/.cache/torch/hub/checkpoints/cifar10_vgg16_bn-6ee7ea24.pt\n",
-            "100% 58.3M/58.3M [00:00<00:00, 77.0MB/s]\n",
+            "100% 58.3M/58.3M [00:00<00:00, 287MB/s]\n",
             "vgg11 parameters: 15,253,578\n",
             "/usr/lib/python3.10/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
             "  self.pid = os.fork()\n",
             "Test Accuracy: 93.94%\n",
-            "student parameters: 267,738\n",
-            "1/10, Loss: 2.524919390983289\n",
-            "2/10, Loss: 2.020861184200667\n",
-            "3/10, Loss: 1.8008951704825282\n",
-            "4/10, Loss: 1.6290598961398424\n",
-            "5/10, Loss: 1.5002550950745488\n",
-            "6/10, Loss: 1.3869721098324221\n",
-            "7/10, Loss: 1.2799069030815378\n",
-            "8/10, Loss: 1.1842992804239474\n",
-            "9/10, Loss: 1.0960039505568306\n",
-            "10/10, Loss: 1.019153342832385\n",
-            "Test Accuracy: 70.18%\n"
+            "student parameters: 11,418\n",
+            "Epoch 1/10, Loss: 1.685999322730257\n",
+            "Epoch 2/10, Loss: 1.3775095198770313\n",
+            "Epoch 3/10, Loss: 1.2597293524486024\n",
+            "Epoch 4/10, Loss: 1.1693231135682987\n",
+            "Epoch 5/10, Loss: 1.1004752309426018\n",
+            "Epoch 6/10, Loss: 1.0394911938311193\n",
+            "Epoch 7/10, Loss: 0.9995222329483617\n",
+            "Epoch 8/10, Loss: 0.9720338203413103\n",
+            "Epoch 9/10, Loss: 0.9498414115222824\n",
+            "Epoch 10/10, Loss: 0.9271225101502655\n",
+            "Test Accuracy: 66.68%\n",
+            "student parameters: 11,418\n",
+            "1/10, Loss: 2.728245318088385\n",
+            "2/10, Loss: 2.2764040856715053\n",
+            "3/10, Loss: 2.1126549027460007\n",
+            "4/10, Loss: 1.9770449418241105\n",
+            "5/10, Loss: 1.8630830192809824\n",
+            "6/10, Loss: 1.7679248298220622\n",
+            "7/10, Loss: 1.7015317355275459\n",
+            "8/10, Loss: 1.6545434232867893\n",
+            "9/10, Loss: 1.6130464159314284\n",
+            "10/10, Loss: 1.5747849456489544\n",
+            "Test Accuracy: 67.33%\n"
           ]
         }
       ]
